--- a/Suwen.Api/appsettings.json
+++ b/Suwen.Api/appsettings.json
@@ -8,5 +8,12 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "server=SW50058\\SQLEXPRESS01;Database=SuwenDb;Trusted_Connection=True;TrustServerCertificate=True;"
+  },
+  "JwtOptions": {
+    "Issuer": "suwen-api",
+    "Audience": "suwen-client",
+    "Key": "at-least-32-character-long-secure-key-enter-here",
+    "AccessTokenExpirationMinutes": 15,
+    "RefreshTokenExpirationDays": 7
   }
 }
