--- a/Suwen.Api/appsettings.json
+++ b/Suwen.Api/appsettings.json
@@ -7,7 +7,9 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "server=SW50058\\SQLEXPRESS01;Database=SuwenDb;Trusted_Connection=True;TrustServerCertificate=True;"
+    "DefaultConnection": /*"server=SW50058\\SQLEXPRESS01;Database=SuwenDb;Trusted_Connection=True;TrustServerCertificate=True;"*/
+    "server=localhost;user=SA;password=reallyStrongPwd123;database=SuwenDB;TrustServerCertificate=true;Integrated Security=false;"
+    
   },
   "JwtOptions": {
     "Issuer": "suwen-api",
