--- a/Suwen.Api/Suwen.Api.csproj
+++ b/Suwen.Api/Suwen.Api.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.0">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -16,8 +17,8 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Application\Application.csproj" />
-    <ProjectReference Include="..\Persistence\Suwen.Persistence.csproj" />
     <ProjectReference Include="..\Suwen.Infrastructure\Suwen.Infrastructure.csproj" />
+    <ProjectReference Include="..\Suwen.Persistence\Suwen.Persistence.csproj" />
   </ItemGroup>
 
 </Project>
