--- a/Suwen.Api/appsettings.json
+++ b/Suwen.Api/appsettings.json
@@ -7,9 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "server=SW50058\\SQLEXPRESS01;Database=SuwenDb;Trusted_Connection=True;TrustServerCertificate=True;"
-
-
+    "DefaultConnection": "user=SA;password=reallyStrongPwd123;database=SuwenDb;TrustServerCertificate=true;Integrated Security=false;"
   },
   "JwtOptions": {
     "Issuer": "suwen-api",
