--- a/Suwen.Api/appsettings.json
+++ b/Suwen.Api/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "user=SA;password=reallyStrongPwd123;database=SuwenDb;TrustServerCertificate=true;Integrated Security=false;"
+    "DefaultConnection": "server=SW50058\\SQLEXPRESS01;Database=SuwenDb;Trusted_Connection=True;TrustServerCertificate=True;"
   },
   "JwtOptions": {
     "Issuer": "suwen-api",
@@ -17,4 +17,4 @@
     "RefreshTokenExpirationDays": 7
   }
 }
-//"server=SW50058\\SQLEXPRESS01;Database=SuwenDb;Trusted_Connection=True;TrustServerCertificate=True;"
+//"user=SA;password=reallyStrongPwd123;database=SuwenDb;TrustServerCertificate=true;Integrated Security=false;"
