--- a/Suwen.Api/appsettings.json
+++ b/Suwen.Api/appsettings.json
@@ -15,6 +15,14 @@
     "Key": "at-least-32-character-long-secure-key-enter-here",
     "AccessTokenExpirationMinutes": 15,
     "RefreshTokenExpirationDays": 7
+  },
+  "EmailSettings": {
+    "SmtpServer": "smtp.office365.com",
+    "SmtpPort": 587,
+    "SenderName": "Suwen",
+    "SenderEmail": "yagmur.aslan@suwen.com.tr",
+    "Username": "yagmur.aslan@suwen.com.tr",
+    "Password": "buraya mail şifresi"
   }
 }
 //"user=SA;password=reallyStrongPwd123;database=SuwenDb;TrustServerCertificate=true;Integrated Security=false;"
